# mortgage-underwriting-agents

./: .env.example  .gitignore  ACCEPTANCE.md  ASSUMPTIONS.md  LICENSE  PLAN.md  README.md  SECURITY.md  case_definition.yaml  entry-points.json  langgraph.json  mortgage-case.mermaid  project.uiproj  pyproject.toml  uipath.json
.claude/: launch.json
devpost/: CaseWeaver-Deck.pptx  SUBMISSION.md
devpost/deck_build/: build.js  package.json
docs/: ARCHITECTURE.md  DECK_OUTLINE.md  DEMO_SCRIPT.md  DEPLOY_UIPATH.md
evidence/: CODING_AGENT_LOG.md
sim/: __init__.py  cli.py  fixtures.py  inbox.py  runner.py
sim/webui/: __init__.py  app.py
sim/webui/templates/: base.html  case.html  index.html
src/mortgage_agents/: __init__.py  config.py  persistence.py  state.py
src/mortgage_agents/graphs/: __init__.py  _helpers.py  adjudication_agent.py  case_orchestrator.py  crew_panel.py  doc_verify_agent.py  exception_agent.py  intake_agent.py  self_critique.py  underwriting_agent.py
src/mortgage_agents/llm/: __init__.py  provider.py
src/mortgage_agents/policy/: __init__.py  exception_policy.py  underwriting_policy.py
src/mortgage_agents/ports/: __init__.py  local_adapter.py  platform_port.py  uipath_adapter.py
src/mortgage_agents/tools/: __init__.py  documents.py  finance.py  resilience.py
tests/e2e/: test_durable_resume.py
tests/integration/: test_exceptions.py  test_personas.py  test_webui.py
tests/unit/: test_documents.py  test_finance.py  test_policy.py  test_port_contract.py  test_resilience.py  test_self_critique.py
video/: README.md  assemble.py  capture_data.py  make_gallery.py  make_scenes.py  manifest.json  thumb.html
video/assets/: runs.json
video/scenes/: 01_title.html  02_problem.html  03_architecture.html  04_clean.html  05_borderline.html  06_hitl.html  07_durable.html  08_fraud.html  09_cloud.html  10_closing.html
